--- a/theatre.css
+++ b/theatre.css
@@ -1,5 +1,8 @@
+*{
+    box-sizing: border-box;
+}
 body{
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
 }
 .container1 {
     display: grid;
@@ -30,8 +33,17 @@ nav li{
 a{
     text-decoration: none;
 }
+@media (max-width: 1000px){
+    h1 {
+        font-size: 100%;
+    }
+    nav ul{
+        display: none;
+    }
+}
+
 .back-img{
-    max-width: 1077.5px;
+    max-width: 100%;
     max-height: auto;
 }
 h2 {
@@ -40,6 +52,13 @@ h2 {
     left: 230px;
     color: white;
     font-size: 90px;
+}
+@media (max-width: 1000px){
+    h2 {
+        font-size: 20px;
+        left: 130px;
+        top: 135px;
+    }
 }
 h3 {
     border: 1px solid rgba(185, 185, 185, 0.522);
@@ -80,6 +99,17 @@ h3 {
     column-gap: 20px;
     margin-top: 80px;
 }
+@media (max-width: 1000px){
+    h3 {
+        margin-left: unset;
+    }
+    .raisin-pic {
+        margin-left: unset;
+    }
+    .card {
+        flex-direction: column;
+    }
+}
 .chicago {
     width: 250px;
     display: flexbox;
@@ -112,4 +142,10 @@ h4 {
 }
 .so-list{
     grid-area: so-list;
+}
+@media (max-width: 1000px){
+    .card2 {
+        display: flex;
+        flex-direction: column;
+    }
 }
